--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -21,5 +21,5 @@ footer a {
 .to-top-btn:hover {
     background-color: var(--text-secondary);
     color: var(--background-secondary);
-    outline: solid 2px var(--background-secondary);
+    outline: solid 2px var(--text-secondary);
 }
