completed bookGrid with working filter by searchBar

--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -3,6 +3,11 @@ header {
     background-color: var(--background-secondary);
 }
 
+.hero-title,
+.hero-subtitle {
+    color: var(--text-primary);
+}
+
 .to-books-btn {
     background-color: var(--background-secondary);
     color: var(--text-primary);
