--- a/src/components/booksGrid/partials/bookCard.css
+++ b/src/components/booksGrid/partials/bookCard.css
@@ -17,7 +17,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.6);
+    background-color: rgba(193, 88, 74, 0.85);
+    color: var(--text-primary);
     transform: translateY(100%);
     opacity: 0;
     transition: all 0.4s ease;
