--- a/src/components/commentsSection/partials/userComment.css
+++ b/src/components/commentsSection/partials/userComment.css
@@ -23,6 +23,15 @@
     color: var(--text-primary);
 }
 
+#comment-text-input {
+    background-color: transparent;
+    color: var(--text-primary);
+    outline: none;
+    border: none;
+    padding: 0;
+    margin: 0;
+}
+
 .p-rating-item {
     padding: 0 2px;
 }
@@ -46,13 +55,13 @@
 }
 
 .delete-btn {
-    background-color: #FF0000;
-    color: var(--text-primary);
+    background-color: var(--surface);
+    color: #FF0000;
     border: solid 2px #FF0000;
 }
 
 .delete-btn:hover {
-    background-color: var(--text-primary);
-    color: #FF0000;
-    border: solid 2px var(--text-primary);
+    background-color: #FF0000;
+    color: var(--surface);
+    border: solid 2px #FF0000;
 }
