--- a/src/components/bookDetails/bookDetails.css
+++ b/src/components/bookDetails/bookDetails.css
@@ -13,3 +13,15 @@
 .book-overview {
     color: var(--text-primary);
 }
+
+@media (max-width: 768px) {
+    .book-image {
+        display: block;
+        max-width: 80%;
+        margin: 0 auto;
+    }
+
+    .book-title {
+        text-align: center;
+    }
+}
